# PERIL

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: tfl_threat_assessment.csv
data/tfl/: AC2024_AnnualisedEntryExit_CrowdingPublic.xlsm  directory-listing.html  tfldownload.sh
notebooks/: 01_TfL_Data_Exploration.ipynb  02_Threat_Scoring_Analysis.ipynb  03_Website_Implementation_Strategy.ipynb  README.md  SUMMARY.md
notes/: Stage1.md  details.md  threatlevels.md
src/peril/: __init__.py
