[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peril"
version = "0.1.0"
description = "Analysis of buildings/areas likely targeted by terror attacks"
authors = [
    {name = "Krish Mathur", email = "your.email@example.com"},
]
dependencies = [
    # Add dependencies here
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["peril"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
peril = ["*.txt", "*.md"]
